--- a/src/components/DogCard/DogCard.module.css
+++ b/src/components/DogCard/DogCard.module.css
@@ -5,14 +5,12 @@
   padding: 20px;
   max-width: 300px;
   text-align: center;
-  transition: transform 0.6s ease;
+  transition: transform 0.6s ease, height 0.6s ease;
   border: 3px solid #bf0b65;
   font-family: "Poppins", sans-serif;
-  opacity: 1;
-}
-
-.card.hidden {
-  opacity: 0;
+  position: relative;
+  overflow: hidden;
+  min-height: 350px;
 }
 
 .card:hover {
@@ -39,4 +37,44 @@
 .description {
   font-size: 1rem;
   color: #666;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  -webkit-line-clamp: 5;
+  transition: max-height 0.8s ease;
+  max-height: 10em;
+  scrollbar-width: thin;
+  scrollbar-color: #ccc transparent;
+}
+
+.description::-webkit-scrollbar {
+  width: 8px;
+}
+
+.description::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.description::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  border-radius: 10px;
+}
+
+.description::-webkit-scrollbar-thumb:hover {
+  background-color: #aaa;
+}
+
+.description::-webkit-scrollbar-button {
+  display: none;
+}
+
+.description::-webkit-scrollbar:vertical {
+  border-radius: 10px;
+}
+
+.card:hover .description {
+  max-height: 100px;
+  white-space: normal;
+  padding: 10px;
+  overflow-y: auto;
 }
